--- a/bsdesign-output/login.html
+++ b/bsdesign-output/login.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -30,9 +29,9 @@
             </div>
         </div>
     </nav>
-    <div class="container" id="login-container" style="min-height: 99vh;">
+    <div class="container d-flex flex-column justify-content-center align-items-center" id="login-container">
         <h1 class="text-center">Administrator Login</h1>
-        <div class="d-flex justify-content-center align-items-center" style="height: 100%;">
+        <div class="d-flex justify-content-center align-items-center">
             <div class="d-flex flex-column" id="login-pane"><i class="fa fa-lock text-center icon-large"></i>
                 <h1 class="text-center">Login</h1>
                 <form><label class="form-label">Username</label><input class="form-control" type="text"><label class="form-label">Password</label><input class="form-control" type="password"><button class="btn btn-primary" type="button">Login</button></form>
@@ -40,7 +39,7 @@
         </div>
     </div>
     <footer>
-        <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100px;background-color: #111111;margin-top: 50px;"><span class="text-center">© Vanilla 2022<br></span>
+        <div class="d-flex flex-column justify-content-center align-items-center"><span class="text-center">© Vanilla 2022<br></span>
             <div><a class="social-link" href="https://www.kaggle.com/vanilladev"><i class="fab fa-kaggle link-icon"></i></a><span>&nbsp;</span><a class="social-link" href="https://github.com/VanillaDevelop"><i class="fa fa-github link-icon"></i></a></div>
         </div>
     </footer>
