--- a/bsdesign-output/index.html
+++ b/bsdesign-output/index.html
@@ -78,7 +78,7 @@
                 <h5 class="mt-2">Game Development</h5>
                 <p>While my previous attempts at game development have either been very long ago or in the scope of university projects, I am working on concepts for eventual small titles or game jams when time allows for it. I have some prior experience with Unity.</p>
             </div>
-            <div class="col d-flex flex-column align-items-center feature"><i class="fa fa-internet-explorer feature_icon" id="feature_webdev" style="background: var(--bs-blue);"></i>
+            <div class="col d-flex flex-column align-items-center feature"><i class="fa fa-internet-explorer feature_icon" id="feature_webdev"></i>
                 <h5 class="mt-2">Web Development</h5>
                 <p>I work mostly with Django as a full-stack solution, which I have used for this website as well as my bachelor's thesis. However, I also have basic knowledge of frameworks such as Vue and Express to create Node based applications.</p>
             </div>
@@ -92,7 +92,7 @@
         <h1 class="text-center mb-4">Recent Projects</h1>
         <div class="row">
             <div class="col-lg-6 project-column">
-                <div class="d-flex flex-column justify-content-between h-100" style="border-width: 1px;border-style: solid;">
+                <div class="d-flex flex-column justify-content-between h-100">
                     <div>
                         <div class="d-flex justify-content-between">
                             <h5>&nbsp;GPT-2 Subreddit Simulation</h5><span><strong>ARTICLE&nbsp;</strong><i class="fab fa-connectdevelop"></i></span>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="col-lg-6 project-column">
-                <div class="d-flex flex-column justify-content-between h-100" style="border-width: 1px;border-style: solid;">
+                <div class="d-flex flex-column justify-content-between h-100">
                     <div>
                         <div class="d-flex justify-content-between">
                             <h5>Vanilla Develop Website</h5><span><strong>PROJECT</strong>&nbsp;<i class="fab fa-connectdevelop"></i></span>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="col-lg-6 project-column">
-                <div class="d-flex flex-column justify-content-between h-100" style="border-width: 1px;border-style: solid;">
+                <div class="d-flex flex-column justify-content-between h-100">
                     <div>
                         <div class="d-flex justify-content-between">
                             <h5>Rust Helper</h5><span><strong>SIDE</strong>&nbsp;<strong>PROJECT&nbsp;</strong><i class="fab fa-connectdevelop"></i></span>
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="col-lg-6 project-column">
-                <div class="d-flex flex-column justify-content-between h-100" style="border-width: 1px;border-style: solid;">
+                <div class="d-flex flex-column justify-content-between h-100">
                     <div>
                         <div class="d-flex justify-content-between">
                             <h5>Aion Classic Sentiment Analysis</h5><span><strong>ARTICLE&nbsp;</strong><i class="fab fa-connectdevelop"></i></span>
@@ -134,7 +134,7 @@
         </div>
     </div>
     <footer>
-        <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100px;background-color: #111111;margin-top: 50px;"><span class="text-center">© Vanilla 2022<br></span>
+        <div class="d-flex flex-column justify-content-center align-items-center"><span class="text-center">© Vanilla 2022<br></span>
             <div><a class="social-link" href="https://www.kaggle.com/vanilladev"><i class="fab fa-kaggle link-icon"></i></a><span>&nbsp;</span><a class="social-link" href="https://github.com/VanillaDevelop"><i class="fa fa-github link-icon"></i></a></div>
         </div>
     </footer>
