Index, Category Management Page Light Theme

--- a/bsdesign-output/index.html
+++ b/bsdesign-output/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>vanilladev</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap">
@@ -16,8 +17,8 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body class="text-light">
-    <nav class="navbar navbar-dark navbar-expand-md" id="navbar-main">
+<body>
+    <nav class="navbar navbar-light navbar-expand-md" id="navbar-main">
         <div class="container"><a class="navbar-brand" href="#">Vanilla Develop</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
@@ -30,8 +31,8 @@
             </div>
         </div>
     </nav>
-    <div id="frontpage_header"></div>
-    <div class="container">
+    <div id="frontpage-header" class="mb-2"></div>
+    <div class="container mt-4">
         <div class="alert alert-warning alert-dismissible" role="alert"><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             <h5 class="alert-heading"><strong>Work In Progress</strong></h5><span><strong>This webpage is currently being re-developed from scratch.</strong><br>The following pages are not yet available:<br></span>
             <ul>
@@ -89,7 +90,7 @@
         <p class="two-columns">I am currently a full-time student working on my master's degree in Software Engineering. As I plan on finishing my degree in the recommended time, this takes up a good chunk of my time. I usually invest some of my free time into broadening my horizons when it comes to software development. I like learning about new frameworks and technologies by applying them to toy projects that are personally useful to me in some way. Through this, I have learned the basics of <strong>Unity</strong>, <strong>Vue</strong>, <strong>TensorFlow</strong>, <strong>NodeJS</strong>,&nbsp;and other frameworks. On top of that, I also have professional backgrounds through my education in creating applications with a variety of languages such as <strong>C# </strong>and&nbsp;<strong>Python</strong>. Generally, I will be working on one or two such projects simultaneously. On top of that, I also enjoy data analysis and its applications especially within the field of machine learning. I like reporting my findings and experiments in these domains, and so I occasionally write <strong>Articles</strong> about them. I try to apply some scientific rigor to these articles, applying known metrics and following best practices while also attempting to stay within the realm of what is both enjoyable and interesting to read.</p>
     </div>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Recent Projects</h1>
+        <h1 class="text-center mb-4">Recent Work</h1>
         <div class="row">
             <div class="col-lg-6 project-column">
                 <div class="d-flex flex-column justify-content-between h-100">
@@ -127,13 +128,13 @@
                         <div class="d-flex justify-content-between">
                             <h5>Aion Classic Sentiment Analysis</h5><span><strong>ARTICLE&nbsp;</strong><i class="fab fa-connectdevelop"></i></span>
                         </div>
-                        <p>In the summer of 2021, the classic MMORPG Aion was re-released in the North American area. This version featured the content available near its original launch, but introduced new microtransaction systems which upset the originally intended game design. This article</p>
+                        <p>In the summer of 2021, the classic MMORPG Aion was re-released in the North American area. This version featured the content available near its original launch, but introduced new microtransaction systems which upset the originally intended game design. This article explores the public response to this decision.</p>
                     </div><a class="link-readmore" href="#">Read More &gt;</a>
                 </div>
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="text-light">
         <div class="d-flex flex-column justify-content-center align-items-center"><span class="text-center">© Vanilla 2022<br></span>
             <div><a class="social-link" href="https://www.kaggle.com/vanilladev"><i class="fab fa-kaggle link-icon"></i></a><span>&nbsp;</span><a class="social-link" href="https://github.com/VanillaDevelop"><i class="fa fa-github link-icon"></i></a></div>
         </div>
