--- a/bsdesign-output/login.html
+++ b/bsdesign-output/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>vanilladev</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap">
@@ -15,8 +16,8 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body class="text-light">
-    <nav class="navbar navbar-dark navbar-expand-md" id="navbar-main">
+<body>
+    <nav class="navbar navbar-light navbar-expand-md" id="navbar-main">
         <div class="container"><a class="navbar-brand" href="#">Vanilla Develop</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
@@ -31,14 +32,14 @@
     </nav>
     <div class="container d-flex flex-column justify-content-center align-items-center" id="login-container">
         <h1 class="text-center">Administrator Login</h1>
-        <div class="d-flex justify-content-center align-items-center">
-            <div class="d-flex flex-column" id="login-pane"><i class="fa fa-lock text-center icon-large"></i>
+        <div class="d-flex justify-content-center align-items-center w-100">
+            <div class="d-flex flex-column text-light" id="login-pane"><i class="fa fa-lock text-center icon-large"></i>
                 <h1 class="text-center">Login</h1>
-                <form><label class="form-label">Username</label><input class="form-control" type="text"><label class="form-label">Password</label><input class="form-control" type="password"><button class="btn btn-primary" type="button">Login</button></form>
+                <form><label class="form-label">Username</label><input class="form-control" type="text"><label class="form-label">Password</label><input class="form-control" type="password"><button class="btn btn-primary mt-3" type="button">Login</button></form>
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="text-light">
         <div class="d-flex flex-column justify-content-center align-items-center"><span class="text-center">© Vanilla 2022<br></span>
             <div><a class="social-link" href="https://www.kaggle.com/vanilladev"><i class="fab fa-kaggle link-icon"></i></a><span>&nbsp;</span><a class="social-link" href="https://github.com/VanillaDevelop"><i class="fa fa-github link-icon"></i></a></div>
         </div>
