--- a/bsdesign-output/blogoverview.html
+++ b/bsdesign-output/blogoverview.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>vanilladev</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body class="text-light">
-    <nav class="navbar navbar-dark navbar-expand-md" id="navbar-main">
+<body>
+    <nav class="navbar navbar-light navbar-expand-md" id="navbar-main">
         <div class="container"><a class="navbar-brand" href="#">Vanilla Develop</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
@@ -30,9 +30,167 @@
             </div>
         </div>
     </nav>
+    <div id="frontpage-header" class="mb-2"></div>
     <div class="container">
-        <h1 class="text-center">Blog Header ABCDE Sample Heading</h1>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#"><span>Home</span></a></li>
+            <li class="breadcrumb-item"><a href="#"><span>Blog</span></a></li>
+        </ol>
     </div>
+    <div class="container header-container mt-5">
+        <h1 class="text-center">Vanilla Develop Blog</h1>
+    </div>
+    <div class="container">
+        <nav class="blogpagination-nav">
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                <li class="page-item"><a class="page-link" href="#">5</a></li>
+                <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+            </ul>
+        </nav>
+        <div class="row mb-3">
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-xl-4 mb-4">
+                <div class="d-flex flex-column blogpost">
+                    <h3 class="text-center">Blog Post Test 123</h3>
+                    <p class="text-center">24th Feb, 2022</p>
+                    <hr>
+                    <div class="d-flex flex-column flex-fill justify-content-between">
+                        <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <nav class="blogpagination-nav">
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                <li class="page-item"><a class="page-link" href="#">5</a></li>
+                <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+            </ul>
+        </nav>
+    </div>
+    <footer class="text-light">
+        <div class="d-flex flex-column justify-content-center align-items-center"><span class="text-center">© Vanilla 2022<br></span>
+            <div><a class="social-link" href="https://www.kaggle.com/vanilladev"><i class="fab fa-kaggle link-icon"></i></a><span>&nbsp;</span><a class="social-link" href="https://github.com/VanillaDevelop"><i class="fa fa-github link-icon"></i></a></div>
+        </div>
+    </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
