Big progress on creating/editing/deleting projects, displaying them with the given template in a similar fashion to blogposts. Overview design is started but not yet finished. Some minor styling changes

--- a/bsdesign-output/projectpage.html
+++ b/bsdesign-output/projectpage.html
@@ -42,18 +42,18 @@
             <div class="col-12 col-lg-8">
                 <div>
                     <ul class="nav nav-tabs" role="tablist">
-                        <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-1">Project Motivation</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#tab-1">Project Motivation</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-2">Project Summary</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#tab-3">Resources</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-3">Resources</a></li>
                     </ul>
                     <div class="tab-content consistent-height">
-                        <div class="tab-pane project-pane" role="tabpanel" id="tab-1">
+                        <div class="tab-pane active project-pane" role="tabpanel" id="tab-1">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consequat luctus nisl, a euismod magna imperdiet eget. Mauris a orci nunc. Aliquam erat volutpat. Donec elementum efficitur volutpat. Aenean scelerisque laoreet ligula, eget posuere est tristique ut. Curabitur pretium egestas metus non volutpat. Morbi mattis maximus tristique. Morbi eget sodales libero, ut placerat augue. Sed ut nisi ac purus egestas consectetur in sed nunc. Vivamus eu venenatis enim. Phasellus molestie at augue id finibus. Cras ac quam id dolor rutrum fringilla eget non odio. Aliquam erat volutpat. Nullam mattis id nunc sed fringilla.<br></p>
                         </div>
                         <div class="tab-pane project-pane" role="tabpanel" id="tab-2">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis consequat luctus nisl, a euismod magna imperdiet eget. Mauris a orci nunc. Aliquam erat volutpat. Donec elementum efficitur volutpat. Aenean scelerisque laoreet ligula, eget posuere est tristique ut. Curabitur pretium egestas metus non volutpat. Morbi.<br></p>
                         </div>
-                        <div class="tab-pane active project-pane" role="tabpanel" id="tab-3">
+                        <div class="tab-pane project-pane" role="tabpanel" id="tab-3">
                             <div class="d-flex justify-content-center align-items-center flex-wrap h-100">
                                 <div class="d-flex flex-column text-center mx-4"><a href="#"><i class="fab fa-kaggle icon-large"></i></a><span>Dataset</span></div>
                                 <div class="d-flex flex-column text-center mx-4"><a href="#"><i class="fa fa-github icon-large"></i></a><span>Repository</span></div>
