Add deletion of images

--- a/bsdesign-output/mediaoverview.html
+++ b/bsdesign-output/mediaoverview.html
@@ -60,7 +60,7 @@
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p class="text-start my-0 fw-bold">Picture title this is the name of the picture</p>
                         <p>This is the description of the picture, it is probably not that long, probably around 2 lines.</p>
-                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><a class="link-danger" href="#">Delete Image</a></div>
+                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><input type="submit" class="danger-link-button" value="Delete Image" /></div>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p class="text-start my-0 fw-bold">Picture title this is the name of the picture</p>
                         <p>This is the description of the picture, it is probably not that long, probably around 2 lines.</p>
-                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><a class="link-danger" href="#">Delete Image</a></div>
+                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><input type="submit" class="danger-link-button" value="Delete Image" /></div>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p class="text-start my-0 fw-bold">Picture title this is the name of the picture</p>
                         <p>This is the description of the picture, it is probably not that long, probably around 2 lines.</p>
-                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><a class="link-danger" href="#">Delete Image</a></div>
+                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><input type="submit" class="danger-link-button" value="Delete Image" /></div>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p class="text-start my-0 fw-bold">Picture title this is the name of the picture</p>
                         <p>This is the description of the picture, it is probably not that long, probably around 2 lines.</p>
-                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><a class="link-danger" href="#">Delete Image</a></div>
+                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><input type="submit" class="danger-link-button" value="Delete Image" /></div>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p class="text-start my-0 fw-bold">Picture title this is the name of the picture</p>
                         <p>This is the description of the picture, it is probably not that long, probably around 2 lines.</p>
-                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><a class="link-danger" href="#">Delete Image</a></div>
+                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><input type="submit" class="danger-link-button" value="Delete Image" /></div>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p class="text-start my-0 fw-bold">Picture title this is the name of the picture</p>
                         <p>This is the description of the picture, it is probably not that long, probably around 2 lines.</p>
-                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><a class="link-danger" href="#">Delete Image</a></div>
+                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><input type="submit" class="danger-link-button" value="Delete Image" /></div>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p class="text-start my-0 fw-bold">Picture title this is the name of the picture</p>
                         <p>This is the description of the picture, it is probably not that long, probably around 2 lines.</p>
-                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><a class="link-danger" href="#">Delete Image</a></div>
+                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><input type="submit" class="danger-link-button" value="Delete Image" /></div>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p class="text-start my-0 fw-bold">Picture title this is the name of the picture</p>
                         <p>This is the description of the picture, it is probably not that long, probably around 2 lines.</p>
-                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><a class="link-danger" href="#">Delete Image</a></div>
+                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><input type="submit" class="danger-link-button" value="Delete Image" /></div>
                     </div>
                 </div>
             </div>
@@ -170,7 +170,7 @@
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p class="text-start my-0 fw-bold">Picture title this is the name of the picture</p>
                         <p>This is the description of the picture, it is probably not that long, probably around 2 lines.</p>
-                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><a class="link-danger" href="#">Delete Image</a></div>
+                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><input type="submit" class="danger-link-button" value="Delete Image" /></div>
                     </div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p class="text-start my-0 fw-bold">Picture title this is the name of the picture</p>
                         <p>This is the description of the picture, it is probably not that long, probably around 2 lines.</p>
-                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><a class="link-danger" href="#">Delete Image</a></div>
+                        <div class="d-flex flex-row justify-content-between align-items-center"><a class="text-end" href="#">Link to Image</a><a href="#">Edit Metadata</a><input type="submit" class="danger-link-button" value="Delete Image" /></div>
                     </div>
                 </div>
             </div>
