--- a/bsdesign-output/index.html
+++ b/bsdesign-output/index.html
@@ -24,14 +24,14 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Side Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Other Work</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Articles</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div id="frontpage-header" class="mb-2"></div>
+    <div id="frontpage-header" class="mb-4"></div>
     <div class="container mt-4">
         <div class="alert alert-warning alert-dismissible" role="alert"><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             <h5 class="alert-heading"><strong>Work In Progress</strong></h5><span><strong>This webpage is currently being re-developed from scratch.</strong><br>The following pages are not yet available:<br></span>
